created header framework

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Register Page</title>
 </head>
 <body>
-    
+    <header>
+        <a href="#">About Us</a>
+        <a href="#">Log in</a>
+    </header>
 </body>
 </html>
