created body and footer framework

--- a/index.html
+++ b/index.html
@@ -10,5 +10,14 @@
         <a href="#">About Us</a>
         <a href="#">Log in</a>
     </header>
+    <div>
+        <h1>Sign Up</h1>
+        <form>
+
+        </form>
+        <footer>
+            
+        </footer>
+    </div>
 </body>
 </html>
