--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
         <h1>Sign Up</h1>
         <form>
             <div>
-                <input type="email">
+                <input type="email" placeholder="Email" name="email" required>
             </div>
             <div>
-                <input type="text">
+                <input type="text" placeholder="Username" name="username" required>
             </div>
             <div>
-                <input type="password">
+                <input type="password" placeholder="Password" name="password" required>
             </div>
             <div>
-                <input type="password">
+                <input type="password" placeholder="Confirm Password" name="confirmPassword" required>
             </div>
             <div>
                 <button type="submit">Submit</button>
