--- a/index.html
+++ b/index.html
@@ -30,7 +30,11 @@
             </div>
         </form>
         <footer>
-
+            <img src="./assets/amazonLogo.png" alt="Amazon icon" height="32" width="32">
+            <img src="./assets/facebookLogo.png" alt="Facebook Icon" height="32" width="32">
+            <img src="./assets/gitHubLogo.png" alt="GitHub Icon" height="32" width="32">
+            <img src="./assets/slackLogo.png" alt="Slack Icon" height="32" width="32">
+            <img src="./assets/instagramLogo.png" alt="Instagram Icon" height="32" width="32">
         </footer>
     </div>
 </body>
