--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <a href="#">About Us</a>
         <a href="#">Log in</a>
     </header>
-    <div>
+    <div class="container">
         <h1>Sign Up</h1>
         <form>
             <div>
